# doc2md

./: .gitignore  README.md  REQUIREMENTS.md  pyproject.toml  pytest.ini
src/doc2md/: __init__.py  cli.py  convert.py  docx_package.py  excel_cli.py  excel_to_md.py  logging_utils.py  renderer.py  security.py  xlsx_render.py
tests/: test_renderer_styles.py  test_security.py  test_smoke_sample_docx.py
